Fri Mar  1 10:31:14 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtknotebook.c (gtk_notebook_reorder_child):
	Fix signed-unsigned error that was accidentally causing
	negative values to append, do it intentionally. Fix docs 
	to say that negative values append. (Alexey A. Malyshev,
	#73108) 

2002-03-01 Alexey Malyshev <maa@sparc.spb.su>
	
        * gtk+/gtk/gtkitemfactory.c
	fixed a little type in docs for gtk_notebook_set_show_border()
	
Fri Mar  1 09:05:19 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkitemfactory.c (gtk_item_factory_delete_entries):
	Really make it work for paths with underline accelerators. (#69247)

2002-02-28  Havoc Pennington  <hp@pobox.com>

	* gtk/gtktextview.c (gtk_text_view_finalize): free the tab array
	for custom tabs, reported by Paolo Maggi #72980
	
Thu Feb 28 19:55:01 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkkeys.c: include gdkkeysysms.h if
	compiling gdk_keyval_convert_case.

	* gtk/gtkmenubar.c (gtk_menu_bar_cycle_focus): Implement
	<Control>Tab <Control><Shift>Tab to cycle between
	all menu bars in a toplevel once one is up.

	* tests/testgtk.c: Add a second menubar, this
	example is already full of crack anyways.

	* gtk/gtkmenushell.c (gtk_menu_shell_key_press): Padd
	unhandled events up to the parent menu shell.

	* gtk/gtkmenuitem.c (gtk_menu_item_select_timeout): Only
	pop up the menu if the parent menu shell is still active.

	* gtk/gtkcontainer.[ch] (_gtk_container_focus_sort): Add a
	old_focus argument, export privately.

2002-02-28  Darin Adler  <darin@bentspoon.com>

	* gtk/gtkfilesel.c: (open_new_dir): Add missing NULL check.

2002-03-01  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkwindow-win32.h (struct _GdkWindowImplWin32): Remove
	the event_mask, it is now in GdkWindowObject.

	* gdk/win32/gdkwindow-win32.c: Change accordingly. Set the
	GDK_STRUCTURE_MASK in gdk_window_set_events(), as it is always set
	in gdk_window_new(), too. (Bug#72921)
