@@ -1,3 +1,14 @@
+Fri Mar  1 14:49:35 2002  Owen Taylor  <otaylor@redhat.com>
+
+	* gtk/gtktextview.c (gtk_text_view_commit_text): Don't delete
+	forward across line boundaries when in overwrite mode.
+	(#73145, reported by Ettore Perazzoli)
+
+Fri Mar  1 14:47:39 2002  Owen Taylor  <otaylor@redhat.com>
+
+	* gtk/gtktextview.c (gtk_text_view_commit_text): Don't
+	join up lines.
+
 Fri Mar  1 10:31:14 2002  Owen Taylor  <otaylor@redhat.com>
 
 	* gtk/gtknotebook.c (gtk_notebook_reorder_child):
